// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fieldset-wrapper accessibility should expose correct accessibility tree property if error state added programmatically 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "role": "none",
                            },
                            Object {
                              "role": "none",
                            },
                          ],
                          "role": "none",
                        },
                      ],
                      "role": "none",
                    },
                  ],
                  "role": "none",
                },
                Object {
                  "name": "Some Message",
                  "role": "StaticText",
                },
              ],
              "role": "none",
            },
          ],
          "role": "none",
        },
      ],
      "name": "",
      "role": "alert",
    },
  ],
  "description": "Some Message",
  "name": "",
  "role": "group",
}
`;

exports[`fieldset-wrapper accessibility should expose correct accessibility tree property in error state 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "role": "none",
                            },
                            Object {
                              "role": "none",
                            },
                          ],
                          "role": "none",
                        },
                      ],
                      "role": "none",
                    },
                  ],
                  "role": "none",
                },
                Object {
                  "name": "Some Message",
                  "role": "StaticText",
                },
              ],
              "role": "none",
            },
          ],
          "role": "none",
        },
      ],
      "name": "",
      "role": "alert",
    },
  ],
  "description": "Some Message",
  "name": "",
  "role": "group",
}
`;

exports[`fieldset-wrapper accessibility should expose correct initial accessibility tree 1`] = `
Object {
  "name": "",
  "role": "group",
}
`;
